[package]
name = "hyper-openssl"
version = "0.9.2"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
description = "Hyper TLS support via OpenSSL"
license = "MIT/Apache-2.0"
repository = "https://github.com/sfackler/hyper-openssl"
readme = "README.md"

[dependencies]
hyper = "1"
openssl = "0.10.32"

[dev-dependencies]
hyper = { version = "1", features = ["full"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util" }
tokio = { version = "1", features = ["full"] }

[patch.crates-io]
hyper = { git = "https://github.com/sfackler/hyper", branch = "readbuf-init-constructor" }