[package]
name = "hyper-openssl"
version = "0.9.2"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
description = "Hyper TLS support via OpenSSL"
license = "MIT/Apache-2.0"
repository = "https://github.com/sfackler/hyper-openssl"
readme = "README.md"
rust-version = "1.64"

[features]
default = []

client-legacy = [
    "dep:http",
    "dep:hyper-util",
    "dep:linked_hash_set",
    "dep:once_cell",
    "dep:parking_lot",
    "dep:pin-project",
    "dep:tower-layer",
    "dep:tower-service",
    "hyper-util?/client-legacy",
]


[dependencies]
http = { version = "1.0.0", optional = true }
hyper = "1.0.1"
hyper-util = { version = "0.1", optional = true }
linked_hash_set = { version = "0.1", optional = true }
once_cell = { version = "1", optional = true }
openssl = "0.10.32"
openssl-sys = "0.9.26"
parking_lot = { version = "0.12", optional = true }
pin-project = { version = "1.1.3", optional = true }
tower-layer = { version = "0.3", optional = true }
tower-service = { version = "0.3", optional = true }

[dev-dependencies]
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
